# meli-challenge

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CI_CD_README.md  DOCKER_README.md  DOCKER_SUMMARY.md  Dockerfile  Dockerfile.collection  Dockerfile.identification  Dockerfile.lambda  Makefile  QUICKSTART.md  README.md  SECURITY.md  SERVERLESS_README.md  SPIDER_USAGE.md  VALIDATION_SUMMARY.md  deploy-docker.sh  deploy-local.sh  deploy-serverless.sh  deploy.sh  docker-compose.override.yml  docker-compose.yml  env.example  healthcheck.py  package-lock.json  package.json  pyproject.toml  requirements-scrapy.txt  requirements.txt  run_spiders.py  scrapy.cfg  security-check-safe.sh  serverless-docker.yml  serverless-infra-docker.yml  serverless-infra-only.yml  serverless-minimal.yml  serverless-scrapy.yml  serverless.dev.yml  (+5 more)
.github/workflows/: ci-cd.yml
.scrapy/httpcache/meli-uy-collect/23/23d48cd3c97e57e6b5b1f9cc1c4c3bb966e50ca5/: meta  pickled_meta  response_body  response_headers
.scrapy/httpcache/meli-uy-collect/36/36dec36b584414712f32c76f5fe66d2fb56596f0/: meta  pickled_meta  response_body  response_headers
.scrapy/httpcache/meli-uy-collect/3a/3a1b0daace0a386355905b1e93982d828d990a69/: meta  pickled_meta  response_body  response_headers
.scrapy/httpcache/meli-uy-collect/3a/3aea94b9cad5347ca3c7e5501b80ad2e160c6c61/: meta  pickled_meta  response_body  response_headers
.scrapy/httpcache/meli-uy-collect/44/44d49dc4950711e6d6816c91fb009186227e2478/: meta  pickled_meta  response_body  response_headers
.scrapy/httpcache/meli-uy-collect/62/62951420ffdc7ef3d59fd6ce7cb70fc94c0b9b4f/: meta  pickled_meta  response_body  response_headers
.scrapy/httpcache/meli-uy-collect/6a/6a782dee376bf5e5672694901a4cd493c5057ba3/: meta  pickled_meta  response_body  response_headers
.scrapy/httpcache/meli-uy-collect/86/8618f823fa5b102a0fd8532313d69a36d602b941/: meta  pickled_meta  response_body  response_headers
.scrapy/httpcache/meli-uy-collect/89/8951d560e787b2aea8f51212eab3c9cde217744b/: meta  pickled_meta  response_body  response_headers
.scrapy/httpcache/meli-uy-collect/a9/a9109afc311f49228d4ab383681581b39eb28ed3/: meta  pickled_meta  response_body  response_headers
.scrapy/httpcache/meli-uy-collect/a9/a9378aa7d02a790a3b9b0fcd623f819e3c32f43b/: meta  pickled_meta  response_body  response_headers
.scrapy/httpcache/meli-uy-collect/b3/b354733ccbe731a0b9072672ba18908e3f7cc77e/: meta  pickled_meta  response_body
.scrapy/httpcache/meli-uy-collect/c0/c0351582126e38a563e31fcbc84b24094f28911d/: meta  pickled_meta  response_body  response_headers
.scrapy/httpcache/meli-uy-collect/c3/c3c0490ec0cb84f947e3d1c4e4673c4ee834ac1f/: meta  pickled_meta  request_headers  response_body  response_headers
.scrapy/httpcache/meli-uy-collect/ca/ca72ece6216b28ceebc2f4213fff2e74d193ad87/: meta  pickled_meta  response_body  response_headers
.scrapy/httpcache/meli-uy-collect/ce/ced4cfe5cac206ee757fc3254bea76363b07a677/: meta  pickled_meta  response_body  response_headers
.scrapy/httpcache/meli-uy-collect/d0/d061fb0ced0d0738c7ffe278bcce75d9d52d6bdc/: meta  pickled_meta  response_body  response_headers
.scrapy/httpcache/meli-uy-collect/d8/d8a9834e255d212f5fa9a3362ae635ffa9934d9f/: meta  pickled_meta  response_body  response_headers
.scrapy/httpcache/meli-uy-collect/db/db3712d078c184caa5163f2f6645765e905e51ba/: meta  pickled_meta  response_body  response_headers
.scrapy/httpcache/meli-uy-collect/ec/ec71ec785373bf355a69e483c08bd6858aa2ef03/: meta  pickled_meta  response_body  response_headers
handlers/: __init__.py  collection.py  identification.py  monitoring.py  test.py  validation.py
infrastructure/: main.tf  variables.tf
infrastructure/modules/ecs/: main.tf  outputs.tf  variables.tf
meli_crawler/: items.py  middlewares.py  pipelines.py  settings.py
meli_crawler/config/: selectors.yaml
meli_crawler/spiders/: meli_uy-identify.py  meli_uy_collect.py  meli_uy_identify.py
meli_crawler/utils/: config_loader.py
tests/: README.md  __init__.py  run_tests.py  test_config.py  test_integration.py  test_pipelines.py  test_spiders.py  test_utils.py
validation/: README.md  __init__.py  ai_validator.py  requirements.txt  run_validation.py  validation_cli.py  validation_config.py  validation_pipeline.py
validation_reports/: meli-uy-collect_unknown_20250829_000940.json  meli-uy-collect_unknown_20250829_000952.json  meli-uy-collect_unknown_20250829_001004.json  meli-uy-collect_unknown_20250829_001006.json  meli-uy-collect_unknown_20250829_001011.json  meli-uy-collect_unknown_20250829_001014.json  meli-uy-collect_unknown_20250829_001016.json  meli-uy-collect_unknown_20250829_001023.json  meli-uy-collect_unknown_20250829_001025.json  meli-uy-collect_unknown_20250829_001043.json
