[project]
name = "meli-challenge"
version = "0.1.0"
description = "Challenge - Scalable Scraping with GenAI Validation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.16",
    "python-decouple>=3.8",
    "pyyaml>=6.0.2",
    "scrapy>=2.13.3",
    "scrapy-s3pipeline>=0.7.0",
    "scrapy-zyte-api>=0.31.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
